# lct6

./: README.md
backend/: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
backend/src/inference_server/: __init__.py  main.py  predict.py  schemas.py
backend/src/inference_server/model/weights/: sent_classifier_3_classes.cbm
frontend/: README.md  package-lock.json  package.json
frontend/src/: App.tsx
frontend/src/components/: ProductPhrasesDialog.tsx  ProductsAndReviewsTab.tsx  ReviewsColumn.tsx
frontend/src/components/ui/: badge.tsx  button.tsx  command.tsx
frontend/src/core/: mocks.ts  types.ts
frontend/src/lib/: constants.ts  utils.ts
frontend/src/pages/: Dashboard.tsx
model/: model.py  requirements.txt
model/weights/: 100ep_full_data_model.pth
